syntax="proto3";
package postService;

option java_package = "com.proto.post";
option java_multiple_files = true;

message AddPostRequest {
    string header = 1;
    string content = 2;
    int32 userId = 3;
    string date = 4;
    string token = 5;
    string username = 6;
}

message PostResponse {
    string header = 1;
    string content = 2;
    string date = 3;
    string username = 4;
}

message GetPostsRequest {
    int32 userId = 1;
    string pageSize = 2;
    string timeStamp = 3;
}

service PostService {
    rpc add(AddPostRequest) returns (PostResponse);
    rpc getAll(GetPostsRequest) returns (stream PostResponse);
}